--- a/package.json
+++ b/package.json
@@ -1,21 +1,14 @@
 {
-  "name": "trender",
+  "name": "soulweb",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "bootstrap": "^5.1.3",
-    "firebase": "^9.1.3",
-    "jquery": "^3.6.0",
-    "mongoose": "^6.0.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
-    "react-spinners": "^0.11.0",
-    "reactstrap": "^8.10.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -41,19 +34,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "index.js",
-  "devDependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/SantiMonto/SoulWeb.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/SantiMonto/SoulWeb/issues"
-  },
-  "homepage": "https://github.com/SantiMonto/SoulWeb#readme"
+  }
 }
