--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "proyecto ciclo4",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start" : "ts-node index.ts"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,8 @@
   "homepage": "https://github.com/SantiMonto/SoulWeb#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^6.0.13"
+    "mongoose": "^6.0.13",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.2"
   }
 }
