--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "ts-node index.ts"
+    "start": "ts-node index.ts"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,6 @@
     "mongoose": "^6.0.13",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
-  }
+  },
+  "devDependencies": {}
 }
