--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/SantiMonto/SoulWeb#readme",
   "dependencies": {
+    "apollo-server-express": "^3.5.0",
     "express": "^4.17.1",
+    "graphql": "^16.0.1",
     "mongoose": "^6.0.13",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
