--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^16.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.13",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
