--- a/package.json
+++ b/package.json
@@ -1,22 +1,13 @@
 {
-  "name": "soulweb",
+  "name": "gestion-proyectos-mintic-back",
   "version": "1.0.0",
-  "description": "proyecto ciclo4",
   "main": "index.js",
+  "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node index.ts"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/SantiMonto/SoulWeb.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/SantiMonto/SoulWeb/issues"
-  },
-  "homepage": "https://github.com/SantiMonto/SoulWeb#readme",
+  "type": "module",
   "dependencies": {
     "apollo-server-express": "^3.5.0",
     "bcrypt": "^5.0.1",
@@ -25,8 +16,12 @@
     "express": "^4.17.1",
     "graphql": "^16.0.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.13",
+    "mocha": "^9.1.3",
+    "mongoose": "^6.0.12",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.2"
+    "typescript": "^4.4.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
